# template-cpp17

./: .gitattributes  .gitmodules  README.md  go.mod  go.sum  rules.yaml
.github/workflows/: ci_build_features.yml  ci_build_test.yml  ci_generate.yml
apigear/: goldenmaster.solution.yaml  testbed.simple.module.yaml
docs/docs/: intro.md
docs/docs/features/: api.md  conan.md  features.md  monitor.md  mqtt.md  nats.md  olink.md  stubs.md
docs/docs/quickstart/: index.md
goldenmaster/: CMakeLists.txt
goldenmaster/apigear/: ApigearConfig.cmake.in  CMakeLists.txt  conanfile.py
goldenmaster/apigear/mqtt/: CMakeLists.txt  mqttbaseadapter.h  mqttbaseclient.cpp  mqttclient.cpp  mqttclient.h  mqtttypes.h
goldenmaster/apigear/mqtt/private/: mqttcwrapper.cpp  mqttcwrapper.h
goldenmaster/apigear/nats/: CMakeLists.txt  baseadapter.cpp  baseadapter.h  natsbase.cpp  natsbase.h  natsclient.cpp  natsservice.cpp  natsservice.h  natstypes.h
goldenmaster/apigear/nats/private/: natscwrapper.cpp  natscwrapper.h
goldenmaster/apigear/olink/: CMakeLists.txt  olinkconnection.cpp
goldenmaster/apigear/olink/private/: olinkremote.cpp  olinkremote.h
goldenmaster/apigear/olink/tests/: CMakeLists.txt  olink_connection.test.cpp  olinkhost.test.cpp
goldenmaster/apigear/utilities/: CMakeLists.txt  single_pub.hpp  threadpool.cpp  threadpool.h
goldenmaster/apigear/utilities/tests/: CMakeLists.txt  test_fuzzy_compare.cpp
goldenmaster/examples/app/: CMakeLists.txt  conanfile.txt  main.cpp
goldenmaster/examples/appthreadsafe/: CMakeLists.txt  conanfile.txt  main.cpp
goldenmaster/examples/mqttclient/: CMakeLists.txt  main.cpp
goldenmaster/examples/mqttserver/: CMakeLists.txt  main.cpp
goldenmaster/examples/natsclient/: CMakeLists.txt  conanfile.txt  main.cpp
goldenmaster/examples/natsserver/: CMakeLists.txt  main.cpp
goldenmaster/examples/olinkclient/: CMakeLists.txt  main.cpp
goldenmaster/examples/olinkserver/: CMakeLists.txt  conanfile.txt  main.cpp
goldenmaster/modules/counter/: CMakeLists.txt  CounterConfig.cmake.in
goldenmaster/modules/counter/conan/: conanfile.py
goldenmaster/modules/counter/implementation/: CMakeLists.txt  counter.cpp  counter.h  counter.test.cpp
goldenmaster/modules/custom_types/: CMakeLists.txt  Custom_typesConfig.cmake.in
goldenmaster/modules/custom_types/conan/: conanfile.py
goldenmaster/modules/custom_types/conan/test_package/: CMakeLists.txt  conanfile.py
goldenmaster/modules/custom_types/implementation/: CMakeLists.txt
goldenmaster/modules/extern_types/: CMakeLists.txt  Extern_typesConfig.cmake.in
goldenmaster/modules/extern_types/conan/: conanfile.py
goldenmaster/modules/extern_types/implementation/: CMakeLists.txt
goldenmaster/modules/tb_enum/: CMakeLists.txt  Tb_enumConfig.cmake.in
goldenmaster/modules/tb_enum/conan/: conanfile.py
goldenmaster/modules/tb_enum/implementation/: CMakeLists.txt  enuminterface.cpp  enuminterface.h  enuminterface.test.cpp
goldenmaster/modules/tb_names/: CMakeLists.txt  Tb_namesConfig.cmake.in
goldenmaster/modules/tb_names/conan/: conanfile.py
goldenmaster/modules/tb_names/implementation/: CMakeLists.txt  names.cpp  names.h  names.test.cpp
goldenmaster/modules/tb_same1/: CMakeLists.txt  Tb_same1Config.cmake.in
goldenmaster/modules/tb_same1/conan/: conanfile.py
goldenmaster/modules/tb_same1/implementation/: CMakeLists.txt  sameenum1interface.cpp  sameenum1interface.h  sameenum1interface.test.cpp  sameenum2interface.cpp  sameenum2interface.h  sameenum2interface.test.cpp  samestruct1interface.cpp  samestruct1interface.h  samestruct1interface.test.cpp  samestruct2interface.cpp  samestruct2interface.h  samestruct2interface.test.cpp
goldenmaster/modules/tb_same2/: CMakeLists.txt  Tb_same2Config.cmake.in
goldenmaster/modules/tb_same2/conan/: conanfile.py
goldenmaster/modules/tb_same2/implementation/: CMakeLists.txt  sameenum1interface.cpp  sameenum1interface.h  sameenum1interface.test.cpp  sameenum2interface.cpp  sameenum2interface.h  sameenum2interface.test.cpp  samestruct1interface.cpp  samestruct1interface.h  (+4 more)
goldenmaster/modules/tb_simple/: CMakeLists.txt  Tb_simpleConfig.cmake.in
goldenmaster/modules/testbed1/: CMakeLists.txt  Testbed1Config.cmake.in
goldenmaster/modules/testbed2/: CMakeLists.txt  Testbed2Config.cmake.in
goldenmaster/scripts/: test_cmake.sh  test_conan.bat  test_conan.sh
magefiles/: build.go
templates/: CMakeLists.txt.tpl  README.md
templates/apigear/: ApigearConfig.cmake.in  CMakeLists.txt  conanfile.py
templates/apigear/mqtt/: mqttbaseadapter.cpp  mqttbaseclient.h  mqttservice.cpp  mqttservice.h
templates/apigear/nats/: CMakeLists.txt  baseadapter.cpp  baseadapter.h  natsbase.cpp  natsbase.h  natsclient.cpp  natsclient.h  natscommon.h  natsservice.cpp  natsservice.h  natstypes.h
templates/apigear/nats/private/: natscwrapper.cpp  natscwrapper.h
templates/apigear/olink/: CMakeLists.txt  olinkconnection.cpp  olinkconnection.h
templates/apigear/olink/tests/: CMakeLists.txt  olink_connection.test.cpp  olinkhost.test.cpp
templates/apigear/olink/tests/private/test_server/: test_server.hpp  test_server_request_handler.hpp
templates/apigear/utilities/: CMakeLists.txt  fuzzy_compare.h  single_pub.hpp
templates/examples/app/: CMakeLists.txt.tpl  conanfile.txt.tpl
templates/examples/appthreadsafe/: CMakeLists.txt.tpl  main.cpp.tpl
templates/examples/mqttclient/: CMakeLists.txt.tpl
templates/examples/mqttserver/: CMakeLists.txt.tpl
templates/examples/natsclient/: CMakeLists.txt.tpl  main.cpp.tpl
templates/examples/natsserver/: CMakeLists.txt.tpl  conanfile.txt.tpl  main.cpp.tpl
templates/examples/olinkclient/: CMakeLists.txt.tpl  conanfile.txt.tpl
templates/examples/olinkserver/: CMakeLists.txt.tpl  main.cpp.tpl
templates/module/: CMakeLists.txt.tpl  ModuleConfig.cmake.in.tpl
templates/module/conan/: conanfile.py.tpl
templates/module/source/: CMakeLists.txt.tpl  implementation.cpp.tpl  implementation.h.tpl  implementation_test.cpp.tpl
templates/scripts/: test_cmake.sh.tpl  test_conan.bat.tpl  test_conan.sh.tpl
(+65 files in other folders)
